# endless-sky

./: .gitignore  CLAUDE.md  CMakeLists.txt  monitor_and_complete.sh  track_progress.sh
docs/: CHINESE_LOCALIZATION_SUMMARY.md  COMPLETION_GUIDE.md  FINAL_COMPLETION_REPORT.md  FINAL_PROGRESS_REPORT.md  FINAL_STATUS.md  LOCALE_INTEGRATION_EXAMPLE.md  LOCALIZATION_USAGE.md  PROJECT_COMPLETE_STATUS.md  PROJECT_FINAL_REPORT.md  PROJECT_SUMMARY.md  SOURCE_CODE_INTEGRATION_PLAN.md  TRANSLATION_MODEL_CONFIG.md  TRANSLATION_PROGRESS_UPDATE.md  TRANSLATION_STATUS.md  chinese-plugin-template.md
docs/plans/: 2026-03-05-chinese-localization-design.md  2026-03-05-chinese-localization-impl.md  2026-03-07-chinese-plugin-design.md  2026-03-07-chinese-plugin-impl.md  2026-03-07-freetype-font.md
docs/superpowers/: ROADMAP.md
es-translator/: .gitignore  Cargo.toml  batch_translate.sh  bulk_translate.sh  monitor_progress.sh  parallel_translate.sh  retry_missing.sh  translate_all.sh
es-translator/prompts/: system.md
es-translator/src/: batch_splitter.rs  checkpoint.rs  extractor.rs  generator.rs  main.rs  scanner.rs  translator.rs  types.rs
locales/: en.json  zh_CN.json
plugins/zh_CN/: credits.txt  plugin.txt
plugins/zh_CN/data/: dialog phrases.txt  gamerules.txt  globals.txt  harvesting.txt  interfaces.txt  map beyond patir.txt  map planets.txt  persons.txt  starts.txt
plugins/zh_CN/data/_deprecated/: deprecated events.txt  deprecated outfits.txt  deprecated ships.txt
plugins/zh_CN/data/_ui/: buttons.txt  flight checks.txt  help.txt  interfaces.txt  landing messages.txt  messages.txt  ratings.txt  tooltips.txt  ui_labels.txt
plugins/zh_CN/data/avgi/: avgi 0 first contact.txt  avgi culture conversations.txt  avgi events.txt  avgi jobs.txt  avgi news.txt  avgi outfits.txt  avgi sales.txt  avgi ships.txt  avgi side missions.txt  avgi weapons.txt  windjammers.txt
plugins/zh_CN/data/bunrodea/: bunrodea missions.txt  bunrodea outfits.txt  bunrodea ships.txt  bunrodea weapons.txt
plugins/zh_CN/data/coalition/: coalition culture conversations.txt  coalition jobs.txt  coalition missions.txt  coalition news.txt  coalition outfits.txt  coalition ships.txt  coalition weapons.txt  heliarch intro.txt  lunarium intro.txt
plugins/zh_CN/data/drak/: drak culture conversations.txt  drak missions.txt  drak outfits.txt  drak ships.txt  indigenous.txt
plugins/zh_CN/data/gegno/: gegno I corroboration.txt  gegno events.txt  gegno intro missions.txt  gegno jobs.txt  gegno outfits.txt  gegno ships.txt
plugins/zh_CN/data/hai/: hai culture conversations.txt  hai jobs.txt  hai missions.txt  hai outfits.txt  hai ships.txt  hai.txt  unfettered 0 prologue.txt  unfettered jobs.txt  unfettered side missions.txt
plugins/zh_CN/data/human/: boarding missions.txt  campaign events.txt  culture conversations.txt  deep jobs.txt  deep missions.txt  dirt belt jobs.txt  engines.txt  far north jobs.txt  free worlds 0 prologue.txt  free worlds 1 start.txt  free worlds 2 middle.txt  free worlds 3 checkmate.txt  free worlds 3 reconciliation.txt  free worlds 4 epilogue.txt  free worlds side plots.txt  free worlds war jobs.txt  frontier jobs.txt  hails.txt  human missions.txt  intro missions.txt  jobs.txt  kestrel.txt  marauders.txt  message buoys.txt  near earth jobs.txt  news.txt  outfits.txt  paradise world jobs.txt  pirate jobs.txt  post-war reactions.txt  power.txt  rim jobs.txt  ships.txt  south jobs.txt  syndicate jobs.txt  weapons.txt
plugins/zh_CN/data/iije/: iije.txt
plugins/zh_CN/data/incipias/: incipias first contact.txt  incipias outfits.txt  incipias ships.txt  tace mesa.txt
plugins/zh_CN/data/kahet/: aberrant missions.txt  aberrant outfits.txt  aberrant ships.txt  beyond patir assets.txt  kahet missions.txt  kahet outfits.txt  kahet ships.txt
plugins/zh_CN/data/korath/: korath culture conversations.txt  korath jobs.txt  korath missions.txt  korath outfits.txt  korath ships.txt  korath weapons.txt
plugins/zh_CN/data/pug/: pug missions.txt  pug news.txt  pug outfits.txt  pug ships.txt  pug.txt
plugins/zh_CN/data/quarg/: quarg missions.txt  quarg news.txt  quarg outfits.txt  quarg ships.txt  quarg.txt
plugins/zh_CN/data/remnant/: remnant 1 introduction.txt  remnant 2 cognizance.txt  remnant 2 side missions.txt  remnant commodities.txt  remnant events.txt  remnant jobs.txt  remnant news.txt  remnant outfits.txt  remnant ships.txt  remnant.txt
plugins/zh_CN/data/rulei/: rulei outfits.txt  rulei ships.txt  rulei.txt
plugins/zh_CN/data/sheragi/: archaeology missions.txt  sheragi outfits.txt  sheragi ships.txt
plugins/zh_CN/data/successors/: successor 1 prologue.txt  successor culture conversations.txt  successor hails.txt  successor jobs.txt  successor news.txt  successor outfits.txt  successor sales.txt  successor ships.txt  successor side missions.txt  successor weapons.txt  successors.txt
shaders/: font.frag  font.vert
source/: CMakeLists.txt  ConversationPanel.cpp  GameData.cpp  Locale.cpp  Locale.h  MapDetailPanel.cpp  MapPlanetCard.cpp  MenuPanel.cpp  OutfitterPanel.cpp  ShipyardPanel.cpp  TradingPanel.cpp  main.cpp
source/text/: Font.cpp  Font.h  FontSet.cpp  FontSet.h
tests/: CMakeLists.txt  TEST_PLAN.md
tests/unit/src/: test_BankPanel.cpp  test_BoardingPanel.cpp  test_CategoryType.cpp  test_ClickZone.cpp  test_CollisionType.cpp  test_ConversationPanel.cpp  test_DialogPanel.cpp  test_GameLoadingPanel.cpp  test_GamerulesPanel.cpp  test_HiringPanel.cpp  test_JumpType.cpp  test_LoadPanel.cpp  test_LogbookPanel.cpp  test_MainPanel.cpp  test_MapDetailPanel.cpp  test_MapOutfitterPanel.cpp  test_MouseButton.cpp  test_Paragraphs.cpp  test_SystemEntry.cpp  test_WormholeStrategy.cpp  test_ai.cpp  test_alertLabel.cpp  test_ammoDisplay.cpp  test_angle.cpp  test_animate.cpp  test_armament.cpp  test_asteroidField.cpp  test_body.cpp  test_bookEntry.cpp  test_camera.cpp  test_captureOdds.cpp  test_cargoHold.cpp  test_categoryList.cpp  test_collision.cpp  test_collisionSet.cpp  test_color.cpp  test_command.cpp  test_conditionEntry.cpp  test_conversation.cpp  test_coreStartData.cpp  (+120 more)
(+9 files in other folders)
