[package]
name = "es-translator"
version = "0.1.0"
edition = "2021"
description = "Endless Sky AI-powered translation tool"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
regex = "1.10"
walkdir = "2.5"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
